--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  min-height: 100dvh;
+  height: 100dvh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 1.6rem;
@@ -156,5 +156,5 @@ section {
 }
 
 .box > * {
-	padding: 20px;
+	padding: 1rem;
 }
