--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -121,7 +121,7 @@ p {
 }
 
 section {
-  height: 100vh;
+  height: 100dvh;
 }
 
 .container {
@@ -137,7 +137,7 @@ section {
 
 .flex-column {
   flex-direction: column;
-  gap: 30px;
+  gap: 1rem;
 }
 
 .box-head {
